--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
   <body>
     <div id="message">
       Hello các chế cứ code lên đây nha
+
+
+      <input type="text" name="" id="" placeholder="Nhập tên sản phẩm">
+      <button>Submit</button>
+
     </div>
 
 
