--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <!--Javascript-->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <script src="vendor/bootstrap/js/popper.js"></script>
