--- a/public/afterlogin/index.html
+++ b/public/afterlogin/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Main CSS-->
-  <link rel="stylesheet" type="text/css" href="/public/doc/css/main.css">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!-- or -->
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -19,25 +18,30 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
 
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.13.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.13.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.13.0/firebase-performance-compat.js"></script>
-  
-  
-    <!-- 
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/9.13.0/firebase-app-compat.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/9.13.0/firebase-auth-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-database-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-firestore-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-functions-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-messaging-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-storage-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-analytics-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-remote-config-compat.js"></script>
+  <script defer src="/__/firebase/9.13.0/firebase-performance-compat.js"></script>
+
+
+  <!-- 
         initialize the SDK after all desired features are loaded, set useEmulator to false
         to avoid connecting the SDK to running emulators.
       -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+
+
+  <!-- Main CSS-->
+  <!-- <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
+  <link rel="stylesheet" href="../afterlogin/css/main.css">
 
 </head>
 
@@ -59,7 +63,7 @@
   <!-- Sidebar menu-->
   <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
   <aside class="app-sidebar">
-    <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="/public/images/avata.jpg" width="50px"
+    <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="../images/avata.jpg" width="50px"
         alt="User Image">
       <div>
         <p class="app-sidebar__user-name"><b>Admin</b></p>
@@ -73,19 +77,19 @@
       <li><a class="app-menu__item active" href="index.html"><i class='app-menu__icon bx bx-tachometer'></i><span
             class="app-menu__label">Bảng điều khiển</span></a></li>
 
-    
+
       <li><a class="app-menu__item" href="table-data-product.html"><i
             class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
       </li>
       <li><a class="app-menu__item" href="table-data-oder.html"><i class='app-menu__icon bx bx-task'></i><span
             class="app-menu__label">Quản lý đơn hàng</span></a></li>
-   
-          </span></a></li>
-   
+
+      </span></a></li>
+
       <li><a class="app-menu__item" href="quan-ly-bao-cao.html"><i
             class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo doanh thu</span></a>
       </li>
-    
+
       <li><a class="app-menu__item" href="#"><i class='app-menu__icon bx bx-cog'></i><span class="app-menu__label">Cài
             đặt hệ thống</span></a></li>
     </ul>
@@ -105,17 +109,17 @@
       <!--Left-->
       <div class="col-md-12 col-lg-6">
         <div class="row">
-       <!-- col-6 -->
-       <div class="col-md-6">
-        <div class="widget-small primary coloured-icon"><i class='icon bx bxs-user-account fa-3x'></i>
-          <div class="info">
-            <h4>Tổng khách hàng</h4>
-            <p><b>56 khách hàng</b></p>
-            <p class="info-tong">Tổng số khách hàng được quản lý.</p>
+          <!-- col-6 -->
+          <div class="col-md-6">
+            <div class="widget-small primary coloured-icon"><i class='icon bx bxs-user-account fa-3x'></i>
+              <div class="info">
+                <h4>Tổng khách hàng</h4>
+                <p><b>56 khách hàng</b></p>
+                <p class="info-tong">Tổng số khách hàng được quản lý.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-       <!-- col-6 -->
+          <!-- col-6 -->
           <div class="col-md-6">
             <div class="widget-small info coloured-icon"><i class='icon bx bxs-data fa-3x'></i>
               <div class="info">
@@ -125,7 +129,7 @@
               </div>
             </div>
           </div>
-           <!-- col-6 -->
+          <!-- col-6 -->
           <div class="col-md-6">
             <div class="widget-small warning coloured-icon"><i class='icon bx bxs-shopping-bags fa-3x'></i>
               <div class="info">
@@ -135,7 +139,7 @@
               </div>
             </div>
           </div>
-           <!-- col-6 -->
+          <!-- col-6 -->
           <div class="col-md-6">
             <div class="widget-small danger coloured-icon"><i class='icon bx bxs-error-alt fa-3x'></i>
               <div class="info">
@@ -145,10 +149,10 @@
               </div>
             </div>
           </div>
-           <!-- col-12 -->
-           <div class="col-md-12">
+          <!-- col-12 -->
+          <div class="col-md-12">
             <div class="tile">
-                <h3 class="tile-title">Tình trạng đơn hàng</h3>
+              <h3 class="tile-title">Tình trạng đơn hàng</h3>
               <div>
                 <table class="table table-bordered">
                   <thead>
@@ -172,7 +176,7 @@
                       <td>ER3835</td>
                       <td>Nguyễn Thị Mỹ Yến</td>
                       <td>
-                        16.770.000 đ	
+                        16.770.000 đ
                       </td>
                       <td><span class="badge bg-warning">Đang vận chuyển</span></td>
                     </tr>
@@ -180,71 +184,71 @@
                       <td>MD0837</td>
                       <td>Triệu Thanh Phú</td>
                       <td>
-                        9.400.000 đ	
+                        9.400.000 đ
                       </td>
                       <td><span class="badge bg-success">Đã hoàn thành</span></td>
                     </tr>
                     <tr>
                       <td>MT9835</td>
-                      <td>Đặng Hoàng Phúc	</td>
+                      <td>Đặng Hoàng Phúc </td>
                       <td>
-                        40.650.000 đ	
+                        40.650.000 đ
                       </td>
-                      <td><span class="badge bg-danger">Đã hủy	</span></td>
+                      <td><span class="badge bg-danger">Đã hủy </span></td>
                     </tr>
                   </tbody>
                 </table>
               </div>
               <!-- / div trống-->
             </div>
-           </div>
-            <!-- / col-12 -->
-             <!-- col-12 -->
-            <div class="col-md-12">
-                <div class="tile">
-                  <h3 class="tile-title">Khách hàng</h3>
-                <div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>ID</th>
-                        <th>Tên khách hàng</th>
-                        <th>Ngày sinh</th>
-                        <th>Số điện thoại</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>#183</td>
-                        <td>Hột vịt muối</td>
-                        <td>21/7/1992</td>
-                        <td><span class="tag tag-success">0921387221</span></td>
-                      </tr>
-                      <tr>
-                        <td>#219</td>
-                        <td>Bánh tráng trộn</td>
-                        <td>30/4/1975</td>
-                        <td><span class="tag tag-warning">0912376352</span></td>
-                      </tr>
-                      <tr>
-                        <td>#627</td>
-                        <td>Cút rang bơ</td>
-                        <td>12/3/1999</td>
-                        <td><span class="tag tag-primary">01287326654</span></td>
-                      </tr>
-                      <tr>
-                        <td>#175</td>
-                        <td>Hủ tiếu nam vang</td>
-                        <td>4/12/20000</td>
-                        <td><span class="tag tag-danger">0912376763</span></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-
+          </div>
+          <!-- / col-12 -->
+          <!-- col-12 -->
+          <div class="col-md-12">
+            <div class="tile">
+              <h3 class="tile-title">Khách hàng</h3>
+              <div>
+                <table class="table table-hover">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Tên khách hàng</th>
+                      <th>Ngày sinh</th>
+                      <th>Số điện thoại</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>#183</td>
+                      <td>Hột vịt muối</td>
+                      <td>21/7/1992</td>
+                      <td><span class="tag tag-success">0921387221</span></td>
+                    </tr>
+                    <tr>
+                      <td>#219</td>
+                      <td>Bánh tráng trộn</td>
+                      <td>30/4/1975</td>
+                      <td><span class="tag tag-warning">0912376352</span></td>
+                    </tr>
+                    <tr>
+                      <td>#627</td>
+                      <td>Cút rang bơ</td>
+                      <td>12/3/1999</td>
+                      <td><span class="tag tag-primary">01287326654</span></td>
+                    </tr>
+                    <tr>
+                      <td>#175</td>
+                      <td>Hủ tiếu nam vang</td>
+                      <td>4/12/20000</td>
+                      <td><span class="tag tag-danger">0912376763</span></td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
+
             </div>
-             <!-- / col-12 -->
+          </div>
+          <!-- / col-12 -->
         </div>
       </div>
       <!--END left-->
@@ -369,44 +373,44 @@
     }
   </script>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const loadEl = document.querySelector('#load');
-    // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-    // // The Firebase SDK is initialized and available here!
-    //
-    // firebase.auth().onAuthStateChanged(user => { });
-    // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-    // firebase.firestore().doc('/foo/bar').get().then(() => { });
-    // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-    // firebase.messaging().requestPermission().then(() => { });
-    // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-    // firebase.analytics(); // call to activate
-    // firebase.analytics().logEvent('tutorial_completed');
-    // firebase.performance(); // call to activate
-    //
-    // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const loadEl = document.querySelector('#load');
+      // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+      // // The Firebase SDK is initialized and available here!
+      //
+      // firebase.auth().onAuthStateChanged(user => { });
+      // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+      // firebase.firestore().doc('/foo/bar').get().then(() => { });
+      // firebase.functions().httpsCallable('yourFunction')().then(() => { });
+      // firebase.messaging().requestPermission().then(() => { });
+      // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+      // firebase.analytics(); // call to activate
+      // firebase.analytics().logEvent('tutorial_completed');
+      // firebase.performance(); // call to activate
+      //
+      // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-    try {
-      let app = firebase.app();
-      let features = [
-        'auth',
-        'database',
-        'firestore',
-        'functions',
-        'messaging',
-        'storage',
-        'analytics',
-        'remoteConfig',
-        'performance',
-      ].filter(feature => typeof app[feature] === 'function');
-      loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-    } catch (e) {
-      console.error(e);
-      loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-    }
-  });
-</script>
+      try {
+        let app = firebase.app();
+        let features = [
+          'auth',
+          'database',
+          'firestore',
+          'functions',
+          'messaging',
+          'storage',
+          'analytics',
+          'remoteConfig',
+          'performance',
+        ].filter(feature => typeof app[feature] === 'function');
+        loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+      } catch (e) {
+        console.error(e);
+        loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+      }
+    });
+  </script>
 </body>
 
 </html>
