--- a/public/afterlogin/index.html
+++ b/public/afterlogin/index.html
@@ -39,6 +39,15 @@
   <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script>
+  <!-- lien ket voi functions.js -->
+
+
   <!-- Main CSS-->
   <!-- <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
   <link rel="stylesheet" href="../afterlogin/css/main.css">
@@ -74,19 +83,19 @@
     <ul class="app-menu">
       <li><a class="app-menu__item haha" href="#"><i class='app-menu__icon bx bx-cart-alt'></i>
           <span class="app-menu__label">POS Bán Hàng</span></a></li>
-      <li><a class="app-menu__item active" href="index.html"><i class='app-menu__icon bx bx-tachometer'></i><span
-            class="app-menu__label">Bảng điều khiển</span></a></li>
+      <li><a class="app-menu__item active" href="../afterlogin/index.html"><i
+            class='app-menu__icon bx bx-tachometer'></i><span class="app-menu__label">Bảng điều khiển</span></a></li>
 
 
-      <li><a class="app-menu__item" href="table-data-product.html"><i
+      <li><a class="app-menu__item" href="../afterlogin/table-data-product.html"><i
             class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
       </li>
-      <li><a class="app-menu__item" href="table-data-oder.html"><i class='app-menu__icon bx bx-task'></i><span
-            class="app-menu__label">Quản lý đơn hàng</span></a></li>
+      <li><a class="app-menu__item" href="../afterlogin/table-data-oder.html"><i
+            class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Quản lý đơn hàng</span></a></li>
 
       </span></a></li>
 
-      <li><a class="app-menu__item" href="quan-ly-bao-cao.html"><i
+      <li><a class="app-menu__item" href="../afterlogin/quan-ly-bao-cao.html"><i
             class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo doanh thu</span></a>
       </li>
 
@@ -410,6 +419,28 @@
         loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
       }
     });
+  </script>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBhECFBJadJ4yFQF4KxbVfA7a6mrWsM_jo",
+      authDomain: "appsale-ba3f9.firebaseapp.com",
+      projectId: "appsale-ba3f9",
+      storageBucket: "appsale-ba3f9.appspot.com",
+      messagingSenderId: "757083996678",
+      appId: "1:757083996678:web:258b05b355945f9d207987",
+      measurementId: "G-85H2Z7X2MT"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
   </script>
 </body>
 
