--- a/public/afterlogin/table-data-oder.html
+++ b/public/afterlogin/table-data-oder.html
@@ -57,11 +57,14 @@
       <li><a class="app-menu__item" class="app-menu__item" href="table-data-product.html"><i
             class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
       </li>
+     <li><a class="app-menu__item" class="app-menu__item" href="quan_ly_the_loai.html"><i
+        class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý thể loại</span></a>
+      </li>
       <li><a class="app-menu__item active" href="table-data-oder.html"><i class='app-menu__icon bx bx-task'></i><span
             class="app-menu__label">Quản lý đơn hàng</span></a></li>
    
           </span></a></li>
-   
+    
       <li><a class="app-menu__item" href="quan-ly-bao-cao.html"><i
             class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo doanh thu</span></a>
       </li>
