--- a/public/afterlogin/quan_ly_the_loai.html
+++ b/public/afterlogin/quan_ly_the_loai.html
@@ -102,7 +102,7 @@
             <div class="row element-button">
               <div class="col-sm-2">
 
-                <a class="btn btn-add btn-sm" href="form-add-san-pham.html" title="Thêm"><i class="fas fa-plus"></i>
+                <a class="btn btn-add btn-sm" href="form_add_category.html" title="Thêm"><i class="fas fa-plus"></i>
                   Tạo mới thể loại</a>
               </div>
               <div class="col-sm-2">
