--- a/public/afterlogin/form-add-san-pham.html
+++ b/public/afterlogin/form-add-san-pham.html
@@ -166,16 +166,16 @@
     <ul class="app-menu">
       <li><a class="app-menu__item haha" href="#"><i class='app-menu__icon bx bx-cart-alt'></i>
           <span class="app-menu__label">POS Bán Hàng</span></a></li>
-      <li><a class="app-menu__item active" href="../afterlogin/index.html"><i
+      <li><a class="app-menu__item" href="../afterlogin/index.html"><i
             class='app-menu__icon bx bx-tachometer'></i><span class="app-menu__label">Bảng điều khiển</span></a></li>
 
 
-      <li><a class="app-menu__item" href="../afterlogin/table-data-product.html"><i
+      <li><a class="app-menu__item active" href="../afterlogin/table-data-product.html"><i
             class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý sản phẩm</span></a>
       </li> 
 
        <li><a class="app-menu__item " class="app-menu__item" href="quan_ly_the_loai.html">
-        <i class='app-menu__icon bx bx'></i><span class="app-menu__label">Quản lý thể loại</span></a>
+        <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý thể loại</span></a>
       </li>
       
       <li><a class="app-menu__item" href="../afterlogin/table-data-oder.html"><i
@@ -195,7 +195,7 @@
   <main class="app-content">
     <div class="app-title">
       <ul class="app-breadcrumb breadcrumb">
-        <li class="breadcrumb-item">Danh sách sản phẩm</li>
+        <li class="breadcrumb-item">Danh sách thể loại</li>
         <li class="breadcrumb-item"><a href="#">Thêm sản phẩm</a></li>
       </ul>
     </div>
