--- a/public/afterlogin/table-data-product.html
+++ b/public/afterlogin/table-data-product.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="icon" href="../images/team.jpg">
+
   <!-- Main CSS-->
   <link rel="stylesheet" type="text/css" href="../afterlogin/css/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -15,6 +18,7 @@
   <!-- Font-icon css-->
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
@@ -180,244 +184,7 @@
 
                   </td>
                 </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>62304003</td>
-                  <td>Bàn ăn Vitali mặt đá</td>
-                  <td><img src="/public/img-sanpham/matda.jpg" alt="" width="100px;"></td>
-                  <td>40</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>33.235.000 đ</td>
-                  <td>Bàn ăn</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>72638003</td>
-                  <td>Ghế ăn gỗ Theresa</td>
-                  <td><img src="/public/img-sanpham/ghethera.jpg" alt="" width="100px;"></td>
-                  <td>50</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>950.000 đ</td>
-                  <td>Ghế gỗ</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>72109004</td>
-                  <td>Ghế làm việc Zuno</td>
-                  <td><img src="/public/img-sanpham/zuno.jpg" alt="" width="100px;"></td>
-                  <td>50</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>3.800.000 đ</td>
-                  <td>Ghế gỗ</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>82716001</td>
-                  <td>Ghế ăn Vitali</td>
-                  <td><img src="/public/img-sanpham/vita.jpg" alt="" width="100px;"></td>
-                  <td>55</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>4.600.000 đ</td>
-                  <td>Ghế gỗ</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>72109001</td>
-                  <td>Ghế ăn gỗ Lucy màu trắng</td>
-                  <td><img src="/public/img-sanpham/lucy.jpg" alt="" width="100px;"></td>
-                  <td>38</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>1.100.000 đ</td>
-                  <td>Ghế gỗ</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i> </button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>71304041</td>
-                  <td>Bàn ăn mở rộng Vegas</td>
-                  <td><img src="/public/img-sanpham/vegas.jpg" alt="" width="100px;"></td>
-                  <td>80</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>21.550.000 đ</td>
-                  <td>Bàn thông minh</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>71304037</td>
-                  <td>Bàn ăn mở rộng Gepa</td>
-                  <td><img src="/public/img-sanpham/banan.jpg" alt="" width="100px;"></td>
-                  <td>80</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>16.770.000 đ</td>
-                  <td>Bàn thông minh</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>71304032</td>
-                  <td>Bàn ăn mặt gốm vân đá Cera</td>
-                  <td><img src="/public/img-sanpham/cera.jpg" alt="" width="100px;"></td>
-                  <td>46</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>20.790.000 đ</td>
-                  <td>Bàn thông minh</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>71338008</td>
-                  <td>Bàn ăn mở rộng cao cấp Dolas</td>
-                  <td><img src="/public/img-sanpham/dolas.jpg" alt="" width="100px;"></td>
-                  <td>66</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>22.650.000 đ</td>
-                  <td>Bàn thông minh</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>83826226</td>
-                  <td>Tủ ly - tủ bát</td>
-                  <td><img src="/public/img-sanpham/tu.jpg" alt="" width="100px;"></td>
-                  <td>0</td>
-                  <td><span class="badge bg-danger">Hét hàng</span></td>
-                  <td>2.450.000 đ</td>
-                  <td>Tủ</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>83252001</td>
-                  <td>Giường ngủ Thomas</td>
-                  <td><img src="/public/img-sanpham/thomas.jpg" alt="" width="100px;"></td>
-                  <td>73</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>12.950.000 đ</td>
-                  <td>Giường người lớn</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>83252002</td>
-                  <td>Giường ngủ Jimmy</td>
-                  <td><img src="/public/img-sanpham/jimmy.jpg" alt="" width="100px;"></td>
-                  <td>60</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>16.320.000 đ</td>
-                  <td>Giường người lớn</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>83216008</td>
-                  <td>Giường ngủ Tara chân gỗ</td>
-                  <td><img src="/public/img-sanpham/tare.jpg" alt="" width="100px;"></td>
-                  <td>65</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>19.600.000 đ</td>
-                  <td>Giường người lớn</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
-                <tr>
-                  <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td>83216006</td>
-                  <td>Giường ngủ Kara 1.6x2m</td>
-                  <td><img src="/public/img-sanpham/kara.jpg" alt="" width="100px;"></td>
-                  <td>60</td>
-                  <td><span class="badge bg-success">Còn hàng</span></td>
-                  <td>14.500.000 đ</td>
-                  <td>Giường người lớn</td>
-                  <td><button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                      onclick="myFunction(this)"><i class="fas fa-trash-alt"></i>
-                    </button>
-                    <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                      data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button>
-
-                  </td>
-                </tr>
+             
               </tbody>
             </table>
           </div>
