--- a/public/afterlogin/form_add_category.html
+++ b/public/afterlogin/form_add_category.html
@@ -364,9 +364,9 @@ MODAL
   </script> 
    <!-- //firebase -->
 
-  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
   
   <script src="js/firebase.js"></script>
 
@@ -384,6 +384,8 @@ MODAL
           namecategory: categoryname1
 
         })
+        alert("Thành công")
+        categoryname1 = '';
 
       }
 
