--- a/public/afterlogin/table-data-product.html
+++ b/public/afterlogin/table-data-product.html
@@ -191,7 +191,7 @@
         </div>
       </div>
     </div>
-    <div id="titlelum" style="color: #a43a3a; font-size: 40px;">teo</div>
+
   </main>
 
   <!--
@@ -354,8 +354,19 @@ MODAL
       e.stopImmediatePropagation();
     });
   </script>
+   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+   
+   <script src="js/firebase.js"></script>
+ 
+   <script>
+     var storea = firestore.collection("category");
+ 
+ 
+  
+   </script>
 
-  <script src="js/firebase.js"></script>
 
 </body>
 
