--- a/public/afterlogin/quan_ly_the_loai.html
+++ b/public/afterlogin/quan_ly_the_loai.html
@@ -350,7 +350,7 @@ MODAL
       console.log(sel.data());
       var option = `<tr>
                   <td width="10"><input type="checkbox" name="check1" value="1"></td>
-                  <td> ${sel.id} </td>
+                  <td id="idcategory"> ${sel.id} </td>
                   <td>${sel.data().namecategory}</td>
               
                   <td ><button  class="btn btn-primary btn-sm trash" type="button"  title="Xóa"
