--- a/public/afterlogin/form_add_category.html
+++ b/public/afterlogin/form_add_category.html
@@ -364,21 +364,20 @@ MODAL
   </script> 
    <!-- //firebase -->
 
-<<<<<<< HEAD
    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-<<<<<<< Updated upstream
+
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
-=======
+
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
->>>>>>> parent of f9c05d2 (update_14)
+
   
-=======
-   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+
+   <script c:\Users\My PC\AppData\Local\Programs\Microsoft VS Code\resources\app\out\vs\code\electron-sandbox\workbench\workbench.htmlsrc="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
->>>>>>> Stashed changes
+
   <script src="js/firebase.js"></script>
 
   <script>
