--- a/public/afterlogin/form_add_category.html
+++ b/public/afterlogin/form_add_category.html
@@ -29,13 +29,7 @@
   <script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 
   <!-- Thư viện  firebase  -->
- 
-  <!-- Firebase -->
- 
 
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script>
   <!-- lien ket voi functions.js -->
 
@@ -361,22 +355,12 @@ MODAL
       }
     });
 
-  </script> 
-   <!-- //firebase -->
+  </script>
+  <!-- //firebase -->
 
-   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
-
-  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-
-  
-
-   <script c:\Users\My PC\AppData\Local\Programs\Microsoft VS Code\resources\app\out\vs\code\electron-sandbox\workbench\workbench.htmlsrc="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
 
   <script src="js/firebase.js"></script>
 
@@ -384,18 +368,17 @@ MODAL
     var storea = firestore.collection("category");
 
 
-    async function addCategory() {     
+    function addCategory() {
 
       var categoryname1 = document.getElementById('categoryname').value;
       if (categoryname1.length == 0) {
         alert("Không được để trống thể loại")
       } else {
-        await firestore.collection("category").add({
+        firestore.collection("category").add({
           namecategory: categoryname1
 
         })
-
-        alert("Thành công")
+        // alert("Thành công")
         categoryname1 = '';
 
       }
@@ -403,7 +386,7 @@ MODAL
     }
 
 
- 
+
 
   </script>
 </body>
