--- a/public/afterlogin/table-data-product.html
+++ b/public/afterlogin/table-data-product.html
@@ -135,7 +135,8 @@
                     class="fas fa-trash-alt"></i> Xóa tất cả </a>
               </div>
             </div>
-            <table class="table table-hover table-bordered" id="sampleTable">
+            <!-- <table class="table table-hover table-bordered" id="sampleTable"> -->
+              <table class="table table-hover table-bordered" id="sampleTable">
               <thead>
                 <tr>
                   <th width="10"><input type="checkbox" id="all"></th>
@@ -191,7 +192,6 @@
         </div>
       </div>
     </div>
-    <div id="titlelum" style="color: #a43a3a; font-size: 40px;">teo</div>
   </main>
 
   <!--
